fixed footer spacing

--- a/index.css
+++ b/index.css
@@ -524,6 +524,7 @@ h3 {
   width: 100%;
   left: 0;
   right: 0;
+  margin-bottom: 10px;
 }
 
 .footer p {
